--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Popular Movies</string>
+    <string name="title_activity_movie_detail">MovieDetailActivity</string>
+    <string name="vote_format">%1$,.1f / 10 User Rating</string>
+    <string name="most_popular">Most Popular</string>
+    <string name="top_rated">Top Rated</string>
+    <string name="the_movie_poster">The movie poster</string>
+    <string name="no_internet_connection">No Internet Connection</string>
+    <string name="movie_poster">Movie Poster</string>
 </resources>
