--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="the_movie_poster">The movie poster</string>
     <string name="no_internet_connection">No Internet Connection</string>
     <string name="movie_poster">Movie Poster</string>
+    <string name="favorites">Favorites</string>
 </resources>
