--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="no_internet_connection">No Internet Connection</string>
     <string name="movie_poster">Movie Poster</string>
     <string name="favorites">Favorites</string>
+    <string name="trailers">Trailers:</string>
 </resources>
