--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="movie_poster">Movie Poster</string>
     <string name="favorites">Favorites</string>
     <string name="trailers">Trailers:</string>
+    <string name="add_movies">Add movies</string>
 </resources>
