--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="favorites">Favorites</string>
     <string name="trailers">Trailers:</string>
     <string name="add_movies">Add movies</string>
+    <string name="play">Play</string>
+    <string name="play_button">Play Button</string>
 </resources>
